manifests/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: avillega-hello-pod
spec: {}
