manifests/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-pod
  namespace: avillega-hello-pod
spec:
  to:
    kind: Service
    name: hello-pod
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
